# Duck

./: .vimspector.json  Cargo.toml
shaders/: cube_frag.glsl  cube_vert.glsl  duck_frag.glsl  duck_vert.glsl  simple_vert.glsl  water_frag.glsl  water_vert.glsl
src/: camera.rs  constants.rs  duck_app.rs  keyboard.rs  lib.rs  main.rs  shaders.rs  utils.rs  water.rs  water_texture.rs
src/math/: bernstein_polynomial.rs  bspline.rs
src/math/affine/: transforms.rs
src/math/geometry/: bezier.rs
src/primitives/: color.rs  vertex.rs
src/render/: gl_mesh.rs  gl_program.rs  gl_texture.rs  mesh.rs  mod.rs  texture.rs
