[package]
name = "duck"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glow = "0.10.0"
imgui = "0.10.0"
imgui-glow-renderer = "0.10.0"
imgui-winit-support = "0.10.0"
glutin = "0.29.1"
nalgebra-glm = "0.18.0"
nalgebra = "0.32.2"
itertools = "0.10.5"
enum-map = "2.5.0"
image = "0.24.6"
